@@ -28,6 +28,14 @@
             android:title="@string/ConnectionPasswordPreferenceTitle"
             android:key="ConnectionPasswordPreference"
             android:inputType="textPassword" />
+        
+        <EditTextPreference
+            android:name="@string/DonatorMailPreferenceTitle"
+            android:summary="@string/DonatorMailPreferenceSummary"
+            android:defaultValue=""
+            android:title="@string/DonatorMailPreferenceTitle"
+            android:key="DonatorMailPreference"
+            android:inputType="textFilter" />
 
         <PreferenceScreen
             android:title="@string/ConnectionHttpPreferenceCategoryTitle">
